--- a/tainara_mobile-main/tainara_mobile-main/tainara/inex.html
+++ b/tainara_mobile-main/tainara_mobile-main/tainara/inex.html
@@ -5,8 +5,46 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
     <title>AluraBooks</title>
     <link rel=”stylesheet” href=”styles.css”>
-    <link rel "stylesheet" href= "reset.css">
-</head>
+   </head>
    <body>
-   </body>
-   </html>
+    
+      <header class=”cabeçalho”>
+         <div class="container">
+            <input type=”checkbox” id=”menu” class=”container__botao”>
+            <label for=”menu”>  
+                  <span class=”cabeçalho__menu-hamburguer container__imagem”></span>
+            </label> 
+            <ul class=”lista-menu”>
+               <li class=”lista-menu__titulo”>Categorias</li>
+               <li class=”lista-menu__item”>
+                  <a href=”#” class=”lista-menu__link”>Programação</a>
+               </li>
+               <li class=”lista-menu__item”>
+                  <a href=”#” class=”lista-menu__link”>Front-end</a>
+               </li>
+               <li class=”lista-menu__item”>
+                   <a href="#" class="lista-menu__link">infraestrutura</a>
+               </li>
+               <li class="lista-menu__item">
+                   <a href="#" class="lista-menu__link">business</a>
+
+               </li>
+               <li class="lista-menu__item">
+                   <a href="#" class="lista-menu__link">desing & UX</a> 
+               </li> 
+                </ul>
+            <img src=”img/Logo.svg” alt=”Logo da Alurabooks” class=”container__imagem”>
+         </div>
+         <div class=”container”></div> 
+            <a href=”#”><img src=”img/Favoritos.svg” alt=”Meus favoritos” class=”container__imagem”></a>
+            <a href=”#”><img src=”img/Compras.svg” alt=”Carrinho de compras” class=”container__imagem”></a>
+            <a href=”#”><img src=”img/Usuario.svg” alt=”Meu perfil” class=”container__imagem”></a>    
+      <span class=”cabeçalho__menu-hamburguer”></span>
+      <img src=”img/Logo.svg” alt=”Logo da Alurabooks”>
+         </div>
+      <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos"></a>
+      <a href="#"><img src="img/Compras.svg" alt="carrinho de  compras"></a>
+      <a href="#"><img src="img/Usuário.svg" alt="meu perfil"></a>
+      </header>
+    </body>
+ </html>
