--- a/tainara_mobile-main/tainara_mobile-main/tainara/index.html
+++ b/tainara_mobile-main/tainara_mobile-main/tainara/index.html
@@ -11,7 +11,7 @@
 css2?family=Poppins:wght@300;400;500;700&display=swap” rel=”stylesheet”>
     <link rel=”stylesheet” href=”https://cdn.jsdelivr.net/npm/swiper@8/
 swiper-bundle.min.css”/>
-   <link rel=”stylesheet” href=”reset.css”>
+    <link rel=”stylesheet” href=”styles.css”>
    </head>
    <body>
     
@@ -60,31 +60,7 @@ swiper-bundle.min.css”/>
       estante o que precisa para seu desenvolvimento!</p>
              <input type=”search” class=”banner__pesquisa”
     placeholder=”Qual será sua próxima leitura?”>
+    <section class=”carrossel”>
+      <h2 class=”carrossel__titulo”>Novos lançamentos</h2>
       </section>
-      <section class=”carrossel”>
-         <h2 class=”carrossel__titulo”>Novos lançamentos</h2>
-         <div class=”swiper”>
-            <!-- Additional required wrapper -->
-            <div class=”swiper-wrapper”>
-            <!-- Slides -->
-            <div class="swiper-slide”><img src="img/ApacheKafka.png"
-         alt="livro sobre apache kafka e spring boot da Alurabooks”></div>
-            <div class="swiper-slide"></div>
-            <div class=”swiper-slide”>Slide 3</div>
-            ...
-            </div>
-            <!-- If we need pagination -->
-            <div class=”swiper-pagination”></div>
-            <!-- If we need navigation buttons -->
-            <div class=”swiper-button-prev”></div>
-            <div class=”swiper-button-next”></div>
-            <!-- If we need scrollbar -->
-            <div class=”swiper-scrollbar”></div>
-            </div>
-         </section>
-         <script src=”https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js”></script>
-         </body>
- </html>
- 
-
-   
+      
