--- a/tainara_mobile-main/tainara_mobile-main/tainara_mobile-main/tainara/index.html
+++ b/tainara_mobile-main/tainara_mobile-main/tainara_mobile-main/tainara/index.html
@@ -9,7 +9,9 @@
     <link rel=”preconnect” href=”https://fonts.gstatic.com” crossorigin>
     <link href=”https://fonts.googleapis.com/
 css2?family=Poppins:wght@300;400;500;700&display=swap” rel=”stylesheet”>
-   <link rel=”stylesheet” href=”reset.css”>
+    <link rel=”stylesheet” href=”https://cdn.jsdelivr.net/npm/swiper@8/
+swiper-bundle.min.css”/>
+    <link rel=”stylesheet” href=”styles.css”>
    </head>
    <body>
     
@@ -61,9 +63,4 @@ css2?family=Poppins:wght@300;400;500;700&display=swap” rel=”stylesheet”>
     <section class=”carrossel”>
       <h2 class=”carrossel__titulo”>Novos lançamentos</h2>
       </section>
-      </section>
-    </body>
- </html>
- 
-
-   
+      
